helmfiles/resources/report-portal-gateway/gateway-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: reportportal
  name: reportportal
  namespace: report-portal
spec:
  host: report-portal.<CLUSTER_DOMAIN>
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
